# benchmarking

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
benchkit/: config.py  docker_stats.py  host_compose.py  logging.py  manifest.py  metrics.py  paths.py  reporting.py  resource_usage.py  result_store.py  schema_validation.py  statistics.py  stub_calibration.py  suite_execution.py  timing.py  verify.py  workloads.py
canonical/: experiment_manifest.yaml  result_schema_v3_5_0.json  stub_calibration_schema.json  trace_record_schema.json
kafka_bench/: Dockerfile  consumer.py  requirements.txt
kafka_worker/: Dockerfile
orchestrator/: Dockerfile  benchmark.py  report.py  requirements.txt
results/: agg-kafka-cpu_light-20260211_163523.json  agg-kafka-cpu_light-20260218_145558.json  agg-kafka-delayed-20260211_165219.json  agg-kafka-delayed-20260218_145823.json  agg-kafka-fanout-20260211_165141.json  agg-kafka-fanout-20260218_145744.json  agg-kafka-io_bound-20260211_165115.json  agg-kafka-io_bound-20260218_145717.json  agg-sidekiq-cpu_light-20260211_165255.json  agg-sidekiq-cpu_light-20260218_145909.json  agg-sidekiq-delayed-20260211_165745.json  agg-sidekiq-delayed-20260218_150112.json  agg-sidekiq-fanout-20260211_165707.json  agg-sidekiq-fanout-20260218_150033.json  agg-sidekiq-io_bound-20260211_165646.json  agg-sidekiq-io_bound-20260218_150014.json  analysis_notes.txt  docker_stats_20260211_163430.csv  docker_stats_20260322_162532.csv  docker_stats_20260322_163849.csv  docker_stats_20260322_164923.csv  docker_stats_20260322_165921.csv  (+62 more)
(+199 files in other folders)
